<resources>
    <string name="app_name">MayDay Mobile</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mis_vuelos">Mis vuelos</string>
    <string name="ofertas">Ofertas</string>
    <string name="opiniones">Opiniones</string>
    <string name="configuracion">Configuración</string>
    <string name="ajustes">Ajustes</string>

    <!--Para card_template-->
    <string name="estado_de_vuelo">Estado de vuelo: </string>
    <string name="salida">Salida:</string>
    <string name="terminal">Terminal:</string>
    <string name="puerta">Puerta:</string>
    <string name="despegue_programado">Despegue programado: </string>
    <string name="llegada">Llegada:</string>
    <string name="aterrizaje_programado">Aterrizaje programado: </string>

    <!--Para rating_template-->
    <string name="onestar">1 estrella = muy disconforme</string>
    <string name="fivestars">5 estrellas = muy conforme</string>
    <string name="amabilidad">Amabilidad</string>
    <string name="comida">Comida</string>
    <string name="puntualidad">Puntualidad</string>
    <string name="programa_de_viajeros_frecuentes">Programa de viajeros frecuentes</string>
    <string name="confort">Confort</string>
    <string name="relacion_precio_calidad">Relación precio/calidad</string>



    <string name="Rs" translatable="false">\u20B9</string>
    <string name="rs" translatable="false">\u20B9</string>
    <string name="arrow" translatable="false">\u2192</string>
    <string name="agregar_vuelo">Agregar vuelo</string>
    <string name="no_mostrar_mas_vuelo">No mostrar más este vuelo</string>

    <string name="query_hint">Ingrese vuelo, e.g., AA1490</string>
    <string name="no_mas_6_caracs">No más de 6 caracteres</string>
    <string name="error_codigo_aereo">Sólo letras para código aerolínea</string>
    <string name="error_numero_vuelo">Sólo números para número de vuelo</string>
    <string name="titulo_vuelo">Vuelo</string>
    <string name="rec_a_otros">¿Lo recomendaría a otros?</string>
    <string name="no" translatable="false">NO</string>
    <string name="si">SI</string>
    <string name="comentarios_hint">Ingrese sus comentarios</string>
    <string name="comentarios_listo">LISTO</string>
    <string name="review_post_url" translatable="false">http://hci.it.itba.edu.ar/v1/api/review.groovy?method=reviewairline</string>
    <string name="post_exito">¡Gracias por su opinión!</string>
    <string name="post_fracaso">Algo salió mal, intente luego</string>
    <string name="post_error">Ocurrió un error, intente luego</string>
    <string name="espere_por_favor">Espere por favor</string>
    <string name="programado">Programado</string>
    <string name="activo">Activo</string>
    <string name="desviado">Desviado</string>
    <string name="aterrizado">Aterrizado</string>
    <string name="cancelado">Cancelado</string>
    <string name="ITBA_SERVER_ERROR">Hubo un error en el servidor, por favor intente de nuevo más tarde.</string>
    <string name="NO_CONNECTION_ERROR">Hubo un error en la comunicación. Por favor intente de nuevo más tarde.</string>
    <string name="TIMEOUT">La conexión parece ser muy lenta, por favor intente de nuevo más tarde.</string>
    <string name="UNKNOWN">Error desconocido. Por favor intente de nuevo más tarde.</string>
    <string name="ingrese_vuelo">Ingrese número de vuelo</string>
    <string name="agregar">Agregar</string>
    <string name="no_flight">Número de vuelo no existente. Por favor, intente otro.</string>

    <string name="SIN_METODO">Método faltante.</string>
    <string name="METODO_INVALIDO">El nombre del método suministrado es inválido.</string>
    <string name="REVIEW_INVALIDO">La opinión de la aerolínea suministrado es inválido.</string>
    <string name="el_vuelo">El vuelo</string>
    <string name="esta">esta</string>
    <string name="alerta_vuelo">Alerta de vuelo!</string>


</resources>
