<?xml version="1.0" encoding="utf-8"?>

<com.dexafree.materialList.card.CardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardLayout"
    style="@style/MainLayout"
    android:tag="test_tag">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        style="@style/Material_Card_View"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/estado_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black_button"
                    android:textSize="30sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_padding">

                <TextView
                    android:id="@+id/info_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/onestar"
                    android:textColor="@color/grey_title" />

                <TextView
                    android:id="@+id/info_from2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/info_from"
                    android:text="@string/fivestars"
                    android:textColor="@color/grey_title" />


            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ratings_cardView"
        style="@style/Material_Card_View"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/Divider" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:text="@string/amabilidad"
                    android:textAlignment="center"
                    android:textColor="@color/black_button"
                    android:textSize="25sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RatingBar
                    android:id="@+id/amabilidad_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rate_me"
                    android:numStars="5"
                    android:rating="1"
                    android:stepSize="1.0" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:text="@string/comida"
                    android:textAlignment="center"
                    android:textColor="@color/black_button"
                    android:textSize="25sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RatingBar
                    android:id="@+id/comida_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rate_me"
                    android:numStars="5"
                    android:rating="1"
                    android:stepSize="1.0" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:text="@string/puntualidad"
                    android:textAlignment="center"
                    android:textColor="@color/black_button"
                    android:textSize="25sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RatingBar
                    android:id="@+id/puntualidad_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rate_me"
                    android:numStars="5"
                    android:rating="1"
                    android:stepSize="1.0" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:text="@string/programa_de_viajeros_frecuentes"
                    android:textAlignment="center"
                    android:textColor="@color/black_button"
                    android:textSize="25sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RatingBar
                    android:id="@+id/programa_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rate_me"
                    android:numStars="5"
                    android:rating="1"
                    android:stepSize="1.0" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:text="@string/confort"
                    android:textAlignment="center"
                    android:textColor="@color/black_button"
                    android:textSize="25sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RatingBar
                    android:id="@+id/confort_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rate_me"
                    android:numStars="5"
                    android:rating="1"
                    android:stepSize="1.0" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:text="@string/relacion_precio_calidad"
                    android:textAlignment="center"
                    android:textColor="@color/black_button"
                    android:textSize="25sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RatingBar
                    android:id="@+id/relacion_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rate_me"
                    android:numStars="5"
                    android:rating="1"
                    android:stepSize="1.0" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rec_cardView"
        style="@style/Material_Card_View"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:text="@string/rec_a_otros"
                    android:textAlignment="center"
                    android:textColor="@color/black_button"
                    android:textSize="25sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <ToggleButton
                    android:id="@+id/recToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textOff="@string/no"
                    android:textOn="@string/si" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/comentarios_cardView"
        style="@style/Material_Card_View"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_padding">

                <EditText
                    android:id="@+id/comentarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:hint="@string/comentarios_hint"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorComments" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/listo_cardView"
        style="@style/Material_Card_View"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_padding">

                <Button
                    android:id="@+id/listo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:hint="@string/comentarios_listo" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</com.dexafree.materialList.card.CardLayout>